
    o	Renviron.site and Rprofile.site can have architecture-specific
	versions on systems with sub-architectures.

    o	R CMD check now (by default) also checks Rd files for
    	auto-generated content in need of editing, and missing argument
    	descriptions.

    o	aggregate() gains a formula method thanks to a contribution by
    	Arni Magnusson.

    o	path.expand now propagates NA values rather than converting them
	to "NA".

    o	file.show now disallows NA values for file names, headers, and
	pager.



DEPRECATED & DEFUNCT

    o	Bundles of packages are defunct.

    o	stats::clearNames() is defunct: use unname().

    o	Basic regular expressions are defunct, and strsplit(), grep(),
	grepl(), sub(), gsub(), regexpr() and gregexpr() no longer
	have an 'extended' argument.

    o	methods::trySilent() is defunct.

    o	index.search() (which was deprecated in 2.10.0) is no longer
	exported and has a different argument list.

    o	Use of multiple arguments to return() is now defunct.


INSTALLATION

    o	UTF-8 is now used for the reference manual and package
	manuals.  This requires LaTeX '2005/12/01' or later.


BUG FIXES

    o	Using with(), eval() etc with a list with some unnamed
	elements now works. (PR#14035)

    o	The "quick" dispatch of S4 methods for primitive functions was
	not happening, forcing a search each time.  (Dispatch for
	closures was not affected.)  A side effect is that default
	values for arguments in a method that do not have defaults in
	the generic will now be ignored.

    o	Trying to dispatch S4 methods for primitives during the search
	for inherited methods slows that search down and potentially
	could cause an infinite recursion.  An internal switch was
	added to turn off all such methods from
	findInheritedMethods().

    o	R framework installation (on Mac OS X) would not work properly
	if a rogue Resources directory was present at the top level.
	Such a non-symlink will now be renamed to Resources.old (and